WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136412
Fix a harmless mismerge in BitmapImage::destroyDecodedDataIfNecessary
https://bugs.webkit.org/show_bug.cgi?id=136412
Summary
Fix a harmless mismerge in BitmapImage::destroyDecodedDataIfNecessary
Tim Horton
Reported
2014-08-31 02:08:07 PDT
Fix a harmless mismerge in BitmapImage::destroyDecodedDataIfNecessary
Attachments
Patch
(2.47 KB, patch)
2014-08-31 02:08 PDT
,
Tim Horton
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-08-31 02:08:27 PDT
Created
attachment 237422
[details]
Patch
WebKit Commit Bot
Comment 2
2014-08-31 02:09:51 PDT
Attachment 237422
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:3: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2014-08-31 15:03:11 PDT
http://trac.webkit.org/changeset/173148
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug