Fix a harmless mismerge in BitmapImage::destroyDecodedDataIfNecessary https://bugs.webkit.org/show_bug.cgi?id=136412

Reviewed by Alexey Proskuryakov.

No new tests, just cleanup.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::destroyDecodedDataIfNecessary):
Drop the leading 'c' and the 'static' on the cutoff parameter.
Remove the duplicated early return (seems like it happened in the merge).
Remove reference to the exact size in the comment, since it's different on iOS.


Canonical link: https://commits.webkit.org/154218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173148 268f45cc-cd09-0410-ab3c-d52691b4dbfc