Source/WebCore/platform/graphics/BitmapImage.cpp
@@ -124,17 +124,12 @@ void BitmapImage::destroyDecodedData(bool destroyAll)
 
 void BitmapImage::destroyDecodedDataIfNecessary(bool destroyAll)
 {
-    // Animated images >5MB are considered large enough that we'll only hang on
+    // Animated images over a certain size are considered large enough that we'll only hang on
     // to one frame at a time.
 #if PLATFORM(IOS)
-    static const unsigned cLargeAnimationCutoff = 2097152;
-
-     // If we have decoded frames but there is no encoded data, we shouldn't destroy
-     // the decoded image since we won't be able to reconstruct it later.
-     if (!data() && m_frames.size())
-         return;
+    const unsigned largeAnimationCutoff = 2097152;
 #else
-    static const unsigned cLargeAnimationCutoff = 5242880;
+    const unsigned largeAnimationCutoff = 5242880;
 #endif
 
     // If we have decoded frames but there is no encoded data, we shouldn't destroy
@@ -146,7 +141,7 @@ void BitmapImage::destroyDecodedDataIfNecessary(bool destroyAll)
     for (size_t i = 0; i < m_frames.size(); ++i)
         allFrameBytes += m_frames[i].m_frameBytes;
 
-    if (allFrameBytes > cLargeAnimationCutoff)
+    if (allFrameBytes > largeAnimationCutoff)
         destroyDecodedData(destroyAll);
 }
 
